[project]
name = "hackernews-comments"
version = "0.1.0"
description = "Download HN comments from a given date onward"
readme = "README.md"
authors = [
    { name = "derlt", email = "208923741+derlt@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
]

[project.scripts]
hackernews-comments = "hackernews_comments:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
